# image_pipeline

./: .gitignore  .travis.rosinstall  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README.rst  stack.xml
camera_calibration/: CHANGELOG.rst  CMakeLists.txt  conf.py  index.rst  mainpage.dox  manifest.xml  package.xml  pytest.ini  rosdoc.yaml  rosdoc2.yaml  setup.cfg  setup.py
camera_calibration/camera_calibration/: calibrator.py  camera_calibrator.py  camera_checker.py
camera_calibration/camera_calibration/nodes/: cameracalibrator.py  cameracheck.py
camera_calibration/doc/: api.rst  components.rst  conf.py  index.rst  tutorial_mono.rst  tutorial_stereo.rst
camera_calibration/include/camera_calibration/: calibrate.h  pinhole.h  stereo.h
camera_calibration/msg/: CalibrationPattern.msg  ImagePoint.msg
camera_calibration/nodes/: cal.py  camera_calibrate_from_disk.py  camera_hammer.py  cameracalibrator.py  cameracheck.py
camera_calibration/scripts/: tarfile_calibration.py
camera_calibration/src/: CMakeLists.txt
camera_calibration/src/camera_calibration/: approxsync.py  calibrator.py  (+2 more)
camera_calibration/test/: CMakeLists.txt  directed.py  multiple_boards.py  test_directed.py  test_multiple_boards.py  testapproxsync.py
depth_fisheye_image_proc/: CMakeLists.txt  nodelet_plugins.xml  package.xml
depth_fisheye_image_proc/src/: depth_fisheye_image_proc.cpp
depth_image_proc/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_plugins.xml  package.xml
depth_image_proc/doc/: changes.rst  components.rst  conf.py  index.rst  tutorials.rst
depth_image_proc/launch/: convert_metric.launch.py  crop_foremost.launch.py  disparity.launch.py  point_cloud_xyz.launch.py  point_cloud_xyz_radial.launch.py  point_cloud_xyzi.launch.py  point_cloud_xyzi_radial.launch.py  point_cloud_xyzrgb.launch  point_cloud_xyzrgb.launch.py  point_cloud_xyzrgb_radial.launch.py  register.launch.py
depth_image_proc/script/: update_frame_id.py
depth_image_proc/src/: conversions.cpp  convert_metric.cpp  crop_foremost.cpp  disparity.cpp  point_cloud_xyz.cpp  point_cloud_xyz_radial.cpp  point_cloud_xyzi.cpp  point_cloud_xyzi_radial.cpp  point_cloud_xyzrgb.cpp  point_cloud_xyzrgb_radial.cpp  register.cpp
depth_image_proc/test/: test_register.py  test_register.rviz  test_register.test
image_flip/: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  package.xml
image_flip/cfg/: ImageFlip.cfg
image_flip/launch/: image_flip.launch.py
image_flip/src/: flip_image.cpp  image_flip.cpp  image_flip_node.cpp
image_pipeline/: CHANGELOG.rst  CMakeLists.txt  package.xml  rosdoc2.yaml
image_pipeline/doc/: camera_info.rst  changelog.rst  conf.py  index.rst  tutorials.rst
image_proc/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_plugins.xml  package.xml
image_proc/cfg/: CropDecimate.cfg  Debayer.cfg  Rectify.cfg  Resize.cfg
image_proc/doc/: changes.rst  components.rst  conf.py  index.rst  tutorials.rst
image_proc/include/: crop_decimate.hpp  crop_non_zero.hpp  debayer.hpp  edge_aware.h  image.h  rectify.hpp  resize.hpp  visibility.h
image_proc/launch/: image_proc.launch  image_proc.launch.py
image_proc/src/: crop_decimate.cpp  crop_non_zero.cpp  debayer.cpp  edge_aware.cpp  image_proc.cpp  rectify.cpp  resize.cpp  track_marker.cpp
image_proc/test/: CMakeLists.txt  rostest.cpp  test_bayer.xml  test_rectify.cpp  test_rectify.xml
image_proc_fisheye/: CMakeLists.txt  nodelet_plugins.xml  nodelet_plugins_.xml  package.xml  readme.md
image_proc_fisheye/src/: image_proc_fisheye.cpp
image_publisher/: CHANGELOG.rst  CMakeLists.txt  nodelet_plugins.xml  package.xml
image_publisher/cfg/: ImagePublisher.cfg
image_publisher/doc/: components.rst  conf.py  index.rst
image_publisher/launch/: image_publisher_component_file.launch.py  image_publisher_file.launch.py  image_publisher_mono.launch.py  image_publisher_stereo.launch.py
image_publisher/src/: image_publisher.cpp  image_publisher_node.cpp
image_rotate/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_plugins.xml  package.xml
image_rotate/cfg/: ImageRotate.cfg
image_rotate/doc/: components.rst  conf.py  index.rst
image_rotate/launch/: image_flip.launch.py
image_rotate/src/: image_flip.cpp  image_rotate.cpp  image_rotate_node.cpp
image_view/: CHANGELOG.rst  CMakeLists.txt  README.md  extract_images.cpp  image_view.cpp  image_view_tmp.cpp  mainpage.dox  manifest.xml  nodelet_plugins.xml  package.xml  stereo_view.cpp  test_stereo.cpp
image_view/cfg/: ImageView.cfg
image_view/doc/: changes.rst  components.rst  conf.py  index.rst
image_view/scripts/: extract_images_sync  image_saver_sync
image_view/src/: disparity_view.cpp  disparity_view_node.cpp  extract_images.cpp  extract_images_node.cpp  image_saver.cpp  image_saver_node.cpp  image_view.cpp  image_view_node.cpp  stereo_view.cpp  stereo_view_node.cpp  utilities.cpp  utilities.hpp  utils.hpp  video_recorder.cpp  video_recorder_node.cpp  window_thread.cpp
stereo_image_proc/: CHANGELOG.rst  CMakeLists.txt  Makefile.standalone  README.rst  ROS_BUILD_BLACKLIST  dualstereo-proj.launch  dualstereo_no_ethercat.launch  mainpage.dox  manifest.xml  narrow-proj.cfg  narrow.cfg  narrow.launch  narrow_stereo.launch  narrow_stereoproc.launch  narrow_stereoproc_offset.launch  nodelet_plugins.xml  package.xml  rosdoc.yaml  stereo_image_proc.launch  stereoproc.launch  throttle_narrow_stereo_offset.launch  wide.launch  wide_stereoproc.launch
stereo_image_proc/cfg/: Disparity.cfg  SGDisparity.cfg  StereoImageProc.cfg  stereo_image_proc.cfg
stereo_image_proc/doc/: Doxyfile  components.rst  conf.py  configuration.rst  index.rst  mainpage.dox  tutorials.rst
stereo_image_proc/include/: cam_bridge.h  cam_bridge_old.h  image.h  stereoimage.h  stereolib.h
stereo_image_proc/launch/: stereo_image_proc.launch  stereo_image_proc.launch.py
stereo_image_proc/src/: image.cpp  imageproc.cpp  imageproc_new.cpp  stereolib2.cpp  stereoproc.cpp
stereo_image_proc/test/: test_disparity_node.py  test_point_cloud_node.py
(+254 files in other folders)
