<package format="2">
  <name>camera_calibration</name>
  <version>1.17.0</version>
  <description>
     camera_calibration allows easy calibration of monocular or stereo
     cameras using a checkerboard calibration target.
  </description>
  <author>James Bowman</author>
  <author>Patrick Mihelich</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <maintainer email="software@autonomoustuff.com">Autonomoustuff team</maintainer>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <test_depend>rostest</test_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  
  <exec_depend>python_orocos_kdl</exec_depend>

  <license>BSD</license>
  <url>http://www.ros.org/wiki/camera_calibration</url>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <architecture_independent/>
  </export>
</package>
