<package format="2">
  <name>depth_image_proc</name>
  <version>2.2.0</version>
  <description>

     Contains components for processing depth images such as those
     produced by OpenNI camera. Functions include creating disparity
     images and point clouds, as well as registering (reprojecting)
     a depth image into another camera frame.

  </description>
  <author>Patrick Mihelich</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <maintainer email="stevenmacenski@gmail.com">Steven Macenski</maintainer>
  <maintainer email="software@autonomoustuff.com">Autonomoustuff team</maintainer>
  <maintainer email="chris.ye@intel.com">Chris Ye</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/depth_image_proc</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
