<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_flip</name>
  <version>2.2.1</version>
  <description>
    <p>
      Contains a node that rotates an image stream in 90 degree increments
      about the optical axis.

      This is simpler and faster than the general image_rotate
    </p>
    <p>
      This node is intended to allow camera images to be visualized in an
      orientation that is more intuitive than the hardware-constrained
      orientation of the physical camera, but is limited to fixed mountings
      in 90 degree increments.

    </p>
    <p>
      This node outputs a camera_info, but users are cautioned that the
      distortion data is not corrected for flipping and is only valid if
      symmetric.

    </p>
  </description>

  <maintainer email="robotics@cnu.edu">David Conner</maintainer>

  <license>BSD</license>
  <url type="website">https://index.ros.org/p/image_pipeline/</url>
  <url type="bugtracker">https://github.com/ros-perception/image_pipeline/issues</url>
  <url type="repository">https://github.com/ros-perception/image_pipeline</url>
  <author>David Conner</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>class_loader</build_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
