<package>
  <name>image_proc</name>
  <version>1.12.23</version>
  <description>Single image rectification and color processing.</description>
  <author>Patrick Mihelich</author>
  <author>Kurt Konolige</author>
  <author>Jeremy Leibs</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  <url>http://www.ros.org/wiki/image_proc</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
